# jsonpatch-lite

./: .gitignore  README.md  pyproject.toml
src/jsonpatch_lite/: __init__.py  core.py
tests/: __init__.py  test_jsonpatch_lite.py
